--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ li {
     margin-bottom: 4.2rem;
 }
 
+.common-section{
+    padding: 0 0 9rem 0;
+}
 /*navbar style*/
 .nav-link {
     color: white;
@@ -131,3 +134,19 @@ a:active {
 }
 
 /* end */
+
+/* carasoul styling */
+.carousel .card{
+    background-color: rgb(40, 40, 40);
+    color:white;
+    transition: all 0.3s linear;
+}
+
+/* .carousel-inner .card p{
+    color:white;
+} */
+
+.carousel-inner .card:hover{
+    background-color: rgb(227, 227, 227);
+    color:rgb(40, 40, 40);
+}
