--- a/style.css
+++ b/style.css
@@ -163,3 +163,8 @@ a:active {
     width: 300px; /* Change this to your desired width */
     height: 500px; /* Change this to your desired height */
 }
+
+/* .custom-card2 {
+    width: auto;
+    height: 550px;
+} */
