--- a/style.css
+++ b/style.css
@@ -159,11 +159,11 @@ a:active {
 
 
 /*custom card*/
-.custom-card {
-    width: 300px; /* Change this to your desired width */
-    height: 500px; /* Change this to your desired height */
+/* .custom-card {
+    width: 300px;
+    height: 500px; 
 }
-
+ */
 /* .custom-card2 {
     width: auto;
     height: 550px;
