--- a/style.css
+++ b/style.css
@@ -91,6 +91,11 @@ a:active {
     color: white;
 }
 
+
+.custom-font{
+    font-size: 1rem;
+}
+
 .card-box{
     box-shadow: 1px 1px 1px rgb(193, 193, 193);
 }
@@ -109,6 +114,10 @@ a:active {
     overflow:hidden;
 }
 
+.custom-img{
+    height: 200px;
+    object-fit: cover;
+}
 /* skill section end */
 
 /* curve art */
@@ -151,20 +160,17 @@ a:active {
     color:rgb(40, 40, 40);
 }
 
-.contact-section .form-section{
-    width: 50%;
-    
-}
 
 
 
 /*custom card*/
-/* .custom-card {
-    width: 300px;
-    height: 500px; 
+.custom-card {
+    width: 300px; /* Change this to your desired width */
+    height: 500px; /* Change this to your desired height */
 }
- */
+
 /* .custom-card2 {
     width: auto;
     height: 550px;
 } */
+
